ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,16 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-               <div>
+		<!-- description -->
+                <div>
+			<h1> Ma description </h>
 			<p> je suis un etudiant qui galere à trouver un stage, il est bientot 01h du mat </p>
+		</div>
+
+		<!-- recompense -->
+                <div>
+			<h1> Mes recompenses </h>
+			<p> en contruction </p>
 		</div>
 		
 	
