--- a/hello.html
+++ b/hello.html
@@ -25,7 +25,7 @@
 		<!-- recompense -->
                 <div>
 			<h1> Mes recompenses </h>
-			<p> en contruction </p>
+			<p> <img src="images\medal_bronze.png"> </p>
 		</div>
 
                 <!-- mon gist -->
